# mux-contracts

./: .env.deploy.example  .env.localnet.example  .gitignore  CHANGELOG.md  CONTRACT_IDS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  deny.toml  docker-compose.yml  rustfmt.toml
.github/: CHANGELOG_TEMPLATE.md
.github/workflows/: bindings.yml  ci.yml  deploy.yml  license-check.yml  verify-wasm.yml
.well-known/: security.txt
bindings/: .eslintrc.json  package-lock.json  package.json  tsconfig.json
bindings/__tests__/: abi-reference.test.ts  account-integration.test.ts  addresses.test.ts  batch-integration.test.ts  batcher.test.ts  delegation-bindings.test.ts  delegation-integration.test.ts  deploy-dry-run.test.ts  errors.test.ts  examples.test.ts  factory-integration.test.ts  factory-registry.test.ts  horizon.test.ts  integration.test.ts  local-invoke.test.ts  permissions-bindings.test.ts  policy-integration.test.ts  recovery-bindings.test.ts  registry-integration.test.ts  registry-invoke.test.ts  types.test.ts  version-sync.test.ts  wallet-registry.test.ts
bindings/src/: addresses-config.ts  addresses.ts  batcher.ts  errors.ts  (+5 more)
config/: addresses.json  networks.toml
contracts/: README.md
contracts/soroban-test-helpers/: Cargo.toml
contracts/soroban-test-helpers/src/: lib.rs
docs/: BREAKING_CHANGES.md  MAINNET_DEPLOY_CHECKLIST.md  aa-backend-orchestrator.md  aa-milestone-roadmap.md  aa_sequence_diagram.md  abi_reference.md  access-control-checklist.md  account-abstraction.md  account-upgrade-migration.md  architecture-overview.md  audit-events.md  audit-prep.md  batcher-upgrade.md  batching-limits.md  bindings.md  contract-upgrade-pattern.md  custodial-vs-contract-aa.md  delegation-upgrade.md  dependency_graph.md  deployer-key.md  developer_onboarding.md  error_codes.md  funded-deployer-key.md  mainnet-deploy-checklist.md  npm-publish.md  permissions-upgrade-migration.md  policy-semantics.md  recovery-trust-model.md  rollback-deploy.md  storage-griefing.md  threat-model.md
examples/: account-factory-usage.test.ts  account-factory-usage.ts  backend-invoke.ts  batcher-invoke.ts  bindings-usage.ts  permissions-invoke.ts  policy-invoke.ts  wallet-registry-invoke.ts
scripts/: build-wasm.sh  check-contract-sizes.sh  coverage.sh  deploy-testnet.sh  deploy.sh  fund-accounts.sh  generate-bindings.sh  generate-bindings.ts  invoke-delegation.sh  local-invoke.sh  network-config.sh  sync-versions.sh  test-check-contract-sizes.sh  test-deploy-dry-run.sh  test-deploy-script.sh  test-network-config.sh  test-verify-wasm-hash.sh  verify-wasm-hash.sh
tests/: fuzz_placeholder.rs  mock_env.rs
(+50 files in other folders)
