[workspace]
# Add Cargo workspace members layout
members = [
    "contracts/mux-account",
    "contracts/mux-account-factory",
    "contracts/mux-batcher",
    "contracts/mux-permissions",
    "contracts/mux-policy",
    "contracts/mux-registry",
    "contracts/soroban-test-helpers",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/dami-drips/mux-contracts"

[workspace.dependencies]
# Initialize Soroban Rust workspace dependencies
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"

[profile.dev]
overflow-checks = true

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
